@@ -14,3 +14,22 @@
 190
 230
 3100
+90
+120
+80
+30
+0
+361
+227
+58
+16
+109
+43
+30
+78
+15
+357
+100
+140
+320
+1000
